# poetry-req-hook

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.cfg  setup.py
pre_commit_hooks/: check_req_is_synced.py  pyproject_to_requirements.py
src/: poetry_req_hook.py
testing/resources/pass_custom_reqs/: pyproject.toml  requirements-dev.txt
testing/resources/pass_default_reqs/: pyproject.toml  requirements.txt
tests/: test_check_req_is_synced.py  test_pyproject_to_requirements.py
