[tool.poetry]
name = "pyproject-to-requirements-hook"
version = "0.2.4"
description = ""
authors = ["dimostenis <dimosh3k@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^20.8b1"
flake8 = "^3.9.0"
pre-commit = "^2.11.1"
pytest = "^6.2.2"
setuptools = "^54.2.0"

[tool.isort]
profile = "black"
multi_line_output = 7
force_single_line = true

[tool.flake8]
max-line-length = 88

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.scripts]
pyproject-to-requirements = 'pre_commit_hooks.pyproject_to_requirements:main'
