[tool.poetry]
name = "pyproject-to-requirements-hook"
version = "1.1.0"
description = ""
authors = ["dimostenis <dimosh3k@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0.0"
poetry = "<1.2"

[tool.poetry.dev-dependencies]
black = "*"
pre-commit = "*"
pytest = "*"

[tool.isort]
profile = "black"
multi_line_output = 7
force_single_line = true

[tool.flake8]
max-line-length = 88

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.scripts]
pyproject-to-requirements = 'pre_commit_hooks.pyproject_to_requirements:main'
