[metadata]
name = check-req-is-synced
version = 0.2.1
description = Sync poetry with requirements.txt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dimostenis/poetry-req-hook
author = dimostenis
author_email = dimosh3k@gmail.com
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    poetry
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    posync = pre_commit_hooks.check_req_is_synced:main

[bdist_wheel]
universal = True
